--- a/Estagio/app/src/main/res/layout/activity_main.xml
+++ b/Estagio/app/src/main/res/layout/activity_main.xml
@@ -97,10 +97,12 @@
             android:text="Enviar"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
+            android:onClick="verifica"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
+            android:id="@+id/resultado"
             />
 </LinearLayout>
